@@ -38,16 +38,16 @@ urlpatterns = [
   # path('api/user/refresh-token',                                                                      jwt_views.TokenRefreshView.as_view(),                name='api_user_token_refresh'),
     path('api/user/update',                                                                             ChangePassword.as_view(),                            name='api_user_update'),
     path('api/user',                                                                                    ReturnStatistics.as_view(),                          name='api_user'),
-    path('api/collections/<int:collection_id>/export',                                                      ExportCollectionView.as_view(),                      name='api_collection_export'),
-    path('api/collections/exists/<str:collection_name>',                                                    ExistCollection.as_view(),                           name='api_collection_exist'),
+    path('api/collections/<int:collection_id>/export',                                                  ExportCollectionView.as_view(),                      name='api_collection_export'),
+    path('api/collections/exists/<str:collection_name>',                                                ExistCollection.as_view(),                           name='api_collection_exist'),
     path('api/collections/import',                                                                      ImportView.as_view(),                                name='api_collection_import'),
-    path('api/collections/<int:collection_id>/documents/<int:document_id>/annotations/import',                  ImportAnnotationsView.as_view(),                     name='api_collection_import_annotations'),
-    path('api/collections/<int:collection_id>/documents/<int:document_id>/live',                                DocumentLiveUpdate.as_view(),                        name='document_live_update'),
-    path('api/collections/<int:collection_id>',                                                             HandleCollection.as_view(),                          name='api_collection_rename'),
+    path('api/collections/<int:collection_id>/documents/<int:document_id>/annotations/import',          ImportAnnotationsView.as_view(),                     name='api_collection_import_annotations'),
+    path('api/collections/<int:collection_id>/documents/<int:document_id>/live',                        DocumentLiveUpdate.as_view(),                        name='document_live_update'),
+    path('api/collections/<int:collection_id>',                                                         HandleCollection.as_view(),                          name='api_collection_rename'),
     path('api/collections',                                                                             HandleCollections.as_view(),                         name='api_collections'),
     #path('api/collections/<collection_id>/documents',                                                   HandleDocuments.as_view(),                           name='api_collection_documents'),
-    path('api/collections/<int:cid>/documents',                                                         DocumentsViewList.as_view(),                         name='api_collection_documents'),
     path('api/collections/<int:cid>/documents/<int:did>',                                               DocumentsViewDetail.as_view(),                       name='current_document'),
+    path('api/collections/<int:cid>/documents',                                                         DocumentsViewList.as_view(),                         name='api_collection_documents'),
     path('api/fileoperation/handler/apply/',                                                            HandlerApply.as_view(),                              name='apply_tei_handler'),
     path('api/collections/<int:collection_id>/share',                                                       ShareCollectionView.as_view(),                       name='api_collection_share'),
     path('api/collections/<int:collection_id>/share/<int:share_id>',                                            SharedCollectionDelete.as_view(),                    name='api_collection_share_cancel'),
